--- a/app/src/main/res/navigation/session.xml
+++ b/app/src/main/res/navigation/session.xml
@@ -37,5 +37,9 @@
         android:id="@+id/summaryFragment"
         android:name="com.ceria.capstone.ui.summary.SummaryFragment"
         android:label="fragment_summary"
-        tools:layout="@layout/fragment_summary" />
+        tools:layout="@layout/fragment_summary" >
+        <argument
+            android:name="listenSessionId"
+            app:argType="string" />
+    </fragment>
 </navigation>
